Added several exposed ports to the Dockerfile

--- a/h2/Dockerfile
+++ b/h2/Dockerfile
@@ -23,6 +23,8 @@ COPY start.sh start.sh
 VOLUME ["/opt/traccar/data","/opt/traccar/logs"]
 
 EXPOSE 8082
+EXPOSE 5000-5150/tcp
+EXPOSE 5000-5150/udp
 
 ENTRYPOINT ["/bin/sh"]
 
